# MyTestCode

./: README.md
textureTest/: CMakeLists.txt  config_library.cmake  config_library_example.cmake  main.cpp  textures.qrc
textureTest/meshes/: Topo.dxf  Topo.stl
textureTest/shader/: fragment.glsl
textureTest/src/: BlockMaterialVisualObject.cpp  BlockMaterialVisualObject.h  PrepareBlock3D.cpp  PrepareBlock3D.h  vtkECPolyDataNormals.h  vtkTextureMapToBox.cpp  vtkTextureMapToBox.h  vtkTextureMapToECObject.cpp  vtkTexturingHelper.cpp  vtkTexturingHelper.h
vtkCubeMap/: .gitignore  CMakeLists.txt  README.md  Vertex.glsl  fragment.glsl  main.cpp  vtkECPolyDataNormals.cpp
